# silicon-infer

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: inference_engine.py  model.py  onboarding.py  runtime_environment.py  vllm.py
tests/: test_inference_engine.py  test_model.py  test_onboarding.py  test_runtime_environment.py
